# dotto

./: .classpath  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  dalt.sln  dalt.vcxproj  dalt.vcxproj.filters  dotto.sln  dotto.vcxproj  dotto.vcxproj.filters  nb-configuration.xml  nbactions.xml  pom.xml  run.sh
Assets/Graphics/Materials/: Center Indicator.mat  Cursor.mat  Left Indicator.mat  Note.mat  Right Indicator.mat
Assets/Prefabs/: Note.prefab
Assets/Scenes/: SampleScene.unity
Assets/Scenes/SampleScene_Profiles/: Main Camera Profile.asset
Assets/Scripts/: GameController.cs  Panel.cs  PathController.cs  TrackGenerator.cs
ProjectSettings/: GraphicsSettings.asset  ProjectSettings.asset
benchmarks/: CMakeLists.txt
include/: dotto.h  dotto.pb.h  pch.h
include/dotto/: application.hpp  array.hpp  atlas.hpp  buffer.hpp  camera.hpp  clip_plane.hpp  dotto.h  globals.h  globals.hpp  input.hpp  io.hpp  mesh.hpp  model.hpp  pch.h  program.hpp  rect.hpp  rectangle.hpp  scene.hpp  shader.hpp  tector.hpp  texture.hpp  transform.hpp  uniform_types.h  vector_constants.h  window.h  window.hpp
include/dotto/audio/: audio.hpp
include/dotto/gameplay/: map.hpp  parser1.hpp  structures.hpp
include/dotto/graphics/: renderer.hpp
include/dotto/scene/: launch.hpp  menu.hpp  scene.hpp  stage.hpp  view.hpp
include/dotto/shaders/: fallback.hpp
include/dotto/shading/: program.h  shader.h
include/dotto/ui/: asset.hpp  rect.hpp  texture.hpp
include/dotto/util/: console.hpp
include/tronkko/: dirent.h
scripts/: build.sh  protobuild.sh
source/: CMakeLists.txt  application.cpp  entry.cpp
source/graphics/: renderer.cpp
src/: camera.cpp  dotto.pb.cc  dotto.proto  main.cpp  pch.cpp  stb_image.cpp  window.cpp
src/main/java/com/dotto/cli/: Core.java  GameLock.java  GamePane.java
src/main/java/com/dotto/cli/ui/: Element.java  Generator.java  GraphKit.java  Graphic.java  Skin.java
src/main/java/com/dotto/cli/util/: BeatStreamReader.java  Casteljau.java  Config.java  Flagger.java  GameCall.java  GameLoop.java  Util.java
src/main/java/com/dotto/cli/util/asset/: Audio.java  Beat.java  BeatMap.java  Click.java  Graphic.java  MapData.java  Slide.java  Track.java  TrackData.java  Visualization.java
src/main/java/com/dotto/cli/util/manager/: Audio.java  Discord.java  Graphics.java  MapConfigure.java  Score.java
src/main/java/com/dotto/cli/view/: Boot.java  Menu.java  Track.java  View.java
src/main/java/com/dotto/client/: Core.java  GameLock.java  GamePane.java
src/main/java/com/dotto/client/framework/: Engine.java  GameObject.java
src/main/java/com/dotto/client/ui/: Element.java  GraphKit.java  Graphic.java  Skin.java  Texture.java
src/main/java/com/dotto/client/util/: BeatStreamReader.java  Casteljau.java  Config.java  Flagger.java  GameCall.java  GameLoop.java  Util.java
src/main/java/com/dotto/client/util/asset/: Audio.java  Beat.java  BeatMap.java  MapData.java  TrackData.java
src/main/java/com/dotto/client/util/manager/: Discord.java  Graphics.java  MapConfigure.java  Score.java
src/main/java/com/dotto/client/view/: Menu.java  Track.java  View.java  oldtrack.java
src/shading/: program.cpp  shader.cpp
tests/: CMakeLists.txt
